src/include/lem/solarix/solarix_grammar_engine.h


 typedef void* HGREN_STR;
 typedef void* HGREN_WCOORD;
 typedef void* HGREN_RESPACK;
FAIND_API(HGREN) sol_CreateGrammarEngineW( const wchar_t *DictionaryXml );
FAIND_API(HGREN) sol_CreateGrammarEngineA( const char *DictionaryXml );
#define sol_CreateGrammarEngine sol_CreateGrammarEngineW
#define sol_CreateGrammarEngine sol_CreateGrammarEngineA
FAIND_API(int) sol_DeleteGrammarEngine( HGREN hEngine );
FAIND_API(int) sol_GetVersion( HGREN hEngine, int *Major, int *Minor, int *Build );
FAIND_API(int) sol_DictionaryVersion( HGREN hEngine );
FAIND_API(int) sol_CountEntries( HGREN hEngine );
FAIND_API(int) sol_CountForms( HGREN hEngine );
FAIND_API(int) sol_CountLinks( HGREN hEngine );
FAIND_API(int) sol_MaxLexemLen( HGREN hEngine );
FAIND_API(int) sol_FindEntry(
                             HGREN hEngine,
                             const wchar_t *Word, 
                             int ClassID,         
                             int LanguageID       
                            );
FAIND_API(int) sol_FindClass( HGREN hEngine, const wchar_t *ClassName );
FAIND_API(int) sol_FindEnum( HGREN hEngine, const wchar_t *EnumName );
FAIND_API(int) sol_FindEnumState( HGREN hEngine, int EnumID, const wchar_t *StateName );
FAIND_API(HGREN_STR) sol_FindStringsEx(
                                       HGREN hEngine,
                                       const wchar_t *Word,
                                       int Allow_Dynforms,
                                       int Synonyms,
                                       int Grammar_Links,
                                       int Translations,
                                       int Semantics,
                                       int nJumps
                                      );
FAIND_API(int) sol_CountStrings( HGREN_STR hStrings );
FAIND_API(int) sol_GetStringLen( HGREN_STR hStrings, int i );
FAIND_API(int) sol_GetStringW( HGREN_STR hStrings, int i, wchar_t *Res );
FAIND_API(int) sol_GetStringA( HGREN_STR hStrings, int i, char *Res );
FAIND_API(int) sol_GetString8( HGREN_STR hStrings, int i, char *ResUtf8 );
FAIND_API(int) sol_DeleteStrings( HGREN_STR hStrings );
FAIND_API(int) sol_GetEntryName( HGREN hEngine, int EntryID, wchar_t *Result );
FAIND_API(int) sol_GetEntryClass( HGREN hEngine, int EntryID );
FAIND_API(int) sol_GetClassName( HGREN hEngine, int ClassID, wchar_t *Result );
FAIND_API(int) sol_GetCoordType( HGREN hEngine, int CoordID, int ClassID );
FAIND_API(int) sol_GetNounGender( HGREN hEngine, int EntryIndex );
FAIND_API(int) sol_GetNounForm(
                               HGREN hEngine,   
                               int EntryIndex,
                               int Number,
                               int Case,
                               wchar_t *Result
                              );
FAIND_API(int) sol_GetVerbForm(
                               HGREN hEngine,  
                               int EntryIndex,
                               int Number,
                               int Gender,
                               int Tense,
                               int Person, 
                               wchar_t *Result
                               );
FAIND_API(int) sol_GetAdjectiveForm(
                                    HGREN hEngine,
                                    int EntryIndex,
                                    int Number,
                                    int Gender,
                                    int Case,
                                    int Anim,
                                    int Shortness,
                                    int Compar_Form, 
                                    wchar_t *Result
                                   );
FAIND_API(int) sol_CorrNounNumber(
                                 HGREN hEngine, 
                                 int EntryIndex,   
                                 int Value,        
                                 int Case,         
                                 int Anim,         
                                 wchar_t *Result      
                                 );
FAIND_API(int) sol_CorrVerbNumber(
                                 HGREN hEngine, 
                                 int EntryIndex,
                                 int Value,
                                 int Gender, 
                                 int Tense,
                                 wchar_t *Result
                                 );
FAIND_API(int) sol_CorrAdjNumber(
                                HGREN hEngine, 
                                int EntryIndex,
                                int Value,
                                int Case, 
                                int Gender,
                                int Anim,  
                                wchar_t *Result
                               );
FAIND_API(int) sol_FindWord(
                            HGREN hEngine, 
                            const wchar_t *Word,
                            int *EntryIndex,
                            int *Form,
                            int *Class 
                           );
FAIND_API(int)sol_Value2Text(
                             HGREN hEngine, 
                             wchar_t *Result,
                             int Value,
                             int Gender
                            );
FAIND_API(int) sol_SeekWord( HGREN hEngine, const wchar_t *word, int Allow_Dynforms );
FAIND_API(int) sol_TranslateToNoun( HGREN hEngine, int EntryIndex );
FAIND_API(int) sol_TranslateToInfinitive( HGREN hEngine, int EntryIndex );
FAIND_API(int) sol_TranslateToBase( HGREN hEngine, wchar_t *Word, int AllowDynforms );
FAIND_API(HGREN_STR) sol_TranslateToBases( HGREN hEngine, const wchar_t *Word, int AllowDynforms );
FAIND_API(HGREN_WCOORD) sol_ProjectWord( HGREN hEngine, const wchar_t *Word, int Allow_Dynforms );
FAIND_API(HGREN_WCOORD) sol_ProjectMisspelledWord( HGREN hEngine, const wchar_t *Word, int Allow_Dynforms, int nmaxmiss );
FAIND_API(int) sol_CountProjections( HGREN_WCOORD hList );
FAIND_API(void) sol_DeleteProjections( HGREN_WCOORD hList );
FAIND_API(int) sol_GetIEntry( HGREN_WCOORD hList, int Index );
FAIND_API(int) sol_GetProjCoordState( HGREN hEngine, HGREN_WCOORD hList, int Index, int CoordID );
FAIND_API(HGREN_RESPACK) sol_MorphologyAnalysis(
                                                HGREN hEngine,
                                                const wchar_t *Sentence,
                                                int Flags,
                                                int UnusedFlags,
                                                int Constraints,
                                                int Language
                                               );
FAIND_API(HGREN_RESPACK) sol_MorphologyAnalysisA(
                                                 HGREN hEngine,
                                                 const char *Sentence,
                                                 int Flags,
                                                 int UnusedFlags,
                                                 int Constraints,
                                                 int Language
                                                );
FAIND_API(HGREN_RESPACK) sol_SyntaxAnalysis(
                                            HGREN hEngine,
                                            const wchar_t *Sentence,
                                            int MorphologicalFlags,
                                            int SyntacticFlags,
                                            int Constraints,
                                            int Language
                                           );
FAIND_API(HGREN_RESPACK) sol_SyntaxAnalysisA(
                                             HGREN hEngine,
                                             const char *Sentence,
                                             int MorphologicalFlags,
                                             int SyntacticFlags,
                                             int Constraints,
                                             int Language
                                            );
FAIND_API(void) sol_DeleteResPack( HGREN_RESPACK hPack );
FAIND_API(int) sol_CountGrafs( HGREN_RESPACK hPack );
FAIND_API(int) sol_LemmatizeWord( HGREN hEngine, wchar_t *word, int Allow_Dynforms );