src/include/lem/solarix/GrammarEngineApi.pas

// Wrapper для вызова API грамматического движка из программы на Delphi.
// (c) by Koziev Elijah, Solarix Intellectronix Project
//
// List of API functions: http://www.solarix.ru/api/ru/list.shtml
//                        http://www.solarix.ru/api/en/list.shtml
//
// CD->27.11.2008
// LC->22.10.2011

unit GrammarEngineApi;

interface

uses SysUtils;

// http://www.solarix.ru/api/ru/sol_CreateGrammarEngine.shtml
function sol_CreateGrammarEngineA( DictionaryXml: PChar ): PInteger; stdcall; external 'solarix_grammar_engine.dll' name 'sol_CreateGrammarEngineA';
function sol_CreateGrammarEngineW( DictionaryXml: PWideChar ): PInteger; stdcall; external 'solarix_grammar_engine.dll' name 'sol_CreateGrammarEngineW';

// http://www.solarix.ru/api/ru/sol_DeleteGrammarEngine.shtml
function sol_DeleteGrammarEngine( hEngine: PInteger ): integer; stdcall; external 'solarix_grammar_engine.dll' name 'sol_DeleteGrammarEngine';

// http://www.solarix.ru/api/ru/sol_CountEntries.shtml
function sol_CountEntries( hEngine: PInteger ): integer; stdcall; external 'solarix_grammar_engine.dll' name 'sol_CountEntries';

function sol_CountForms( hEngine: PInteger ): integer; stdcall; external 'solarix_grammar_engine.dll' name 'sol_CountForms';

// http://www.solarix.ru/api/ru/sol_CountLinks.shtml
function sol_CountLinks( hEngine: PInteger ): integer; stdcall; external 'solarix_grammar_engine.dll' name 'sol_CountLinks';

// http://www.solarix.ru/api/en/sol_MaxLexemLen.shtml
function sol_MaxLexemLen( hEngine: PInteger ): integer; stdcall; external 'solarix_grammar_engine.dll' name 'sol_MaxLexemLen';

function sol_LemmatizeWord( hEngine: PInteger; Word: PWideChar; Allow_Dynforms: Integer ): integer; stdcall; external 'solarix_grammar_engine.dll' name 'sol_LemmatizeWord';

// http://www.solarix.ru/api/ru/sol_FindEntry.shtml
function sol_FindEntry( hEngine: PInteger; Word: PWideChar; iClass: integer; Language: integer ): integer; stdcall; external 'solarix_grammar_engine.dll' name 'sol_FindEntry';

function sol_GetVersion( hEngine: PInteger; Major: PInteger; Minor: PInteger; Build: PInteger ): integer; stdcall; external 'solarix_grammar_engine.dll' name 'sol_GetVersion';

function sol_DictionaryVersion( hEngine: PInteger ): integer; stdcall; external 'solarix_grammar_engine.dll' name 'sol_DictionaryVersion';

function sol_FindStringsEx( hEngine: PInteger; Word: PWideChar;
                            Allow_Dynforms: Integer;
                            Synonyms: Integer;
                            Grammar_Links: Integer;
                            Translations: Integer;
                            Semantics: Integer;
                            nJumps: integer
                           ): PInteger; stdcall; external 'solarix_grammar_engine.dll' name 'sol_FindStringsEx';


function sol_CountStrings( hStrList: PInteger ): integer; stdcall; external 'solarix_grammar_engine.dll' name 'sol_CountStrings';
function sol_GetStringLen( hStrList: PInteger; i: integer ): integer; stdcall; external 'solarix_grammar_engine.dll' name 'sol_GetStringLen';
function sol_GetStringW( hStrList: PInteger; i: integer; Word: PWideChar ): integer; stdcall; external 'solarix_grammar_engine.dll' name 'sol_GetStringW';
function sol_GetStringA( hStrList: PInteger; i: integer; Word: PWideChar ): integer; stdcall; external 'solarix_grammar_engine.dll' name 'sol_GetStringA';
function sol_GetString8( hStrList: PInteger; i: integer; Word: PWideChar ): integer; stdcall; external 'solarix_grammar_engine.dll' name 'sol_GetString8';
function sol_DeleteStrings( hStrList: PInteger ): integer; stdcall; external 'solarix_grammar_engine.dll' name 'sol_DeleteStrings';

// http://www.solarix.ru/api/ru/sol_GetEntryName.shtml
function sol_GetEntryName( hEngine: PInteger; EntryIndex: integer; Result: PWideChar ): integer; stdcall; external 'solarix_grammar_engine.dll' name 'sol_GetEntryName';

// http://www.solarix.ru/api/ru/sol_GetEntryClass.shtml
function sol_GetEntryClass( hEngine: PInteger; EntryIndex: integer ): integer; stdcall; external 'solarix_grammar_engine.dll' name 'sol_GetEntryClass';

// http://www.solarix.ru/api/ru/sol_GetClassName.shtml
function sol_GetClassName( hEngine: PInteger; ClassIndex: integer; Word: PWideChar ): integer; stdcall; external 'solarix_grammar_engine.dll' name 'sol_GetClassName';

// http://www.solarix.ru/api/ru/sol_GetCoordType.shtml
function sol_GetCoordType( hEngine: PInteger; CoordId: integer; ClassId: integer ): integer; stdcall; external 'solarix_grammar_engine.dll' name 'sol_GetCoordType';

// http://www.solarix.ru/api/ru/sol_FindClass.shtml
function sol_FindClass( hEngine: PInteger; ClassName: PWideChar ): integer; stdcall; external 'solarix_grammar_engine.dll' name 'sol_FindClass';

// http://www.solarix.ru/api/ru/sol_FindEnum.shtml
function sol_FindEnum( hEngine: PInteger; EnumName: PWideChar ): integer; stdcall; external 'solarix_grammar_engine.dll' name 'sol_FindEnum';

// http://www.solarix.ru/api/ru/sol_FindEnumState.shtml
function sol_FindEnumState( hEngine: PInteger; Enum: integer; StateName: PWideChar ): integer; stdcall; external 'solarix_grammar_engine.dll' name 'sol_FindEnumState';

// http://www.solarix.ru/api/ru/sol_GetNounGender.shtml
function sol_GetNounGender( hEngine: PInteger; EntryIndex: integer ): integer; stdcall; external 'solarix_grammar_engine.dll' name 'sol_GetNounGender';

function sol_GetNounForm( Engine: PInteger; EntryIndex: integer; Number: integer; iCase: integer; Result: PWideChar ): integer; stdcall; external 'solarix_grammar_engine.dll' name 'sol_GetNounForm';




function sol_GetVerbForm( Engine: PInteger; EntryIndex: integer;
                          Number: Integer;
                          Gender: Integer;
                          Tense: Integer;
                          Person: Integer;
                          Result: PWideChar
                         ): integer; stdcall; external 'solarix_grammar_engine.dll' name 'sol_GetVerbForm';


function sol_GetAdjectiveForm( Engine: PInteger; EntryIndex: integer;
                               Number: Integer;
                               Gender: Integer;
                               ICase: Integer;
                               Anim: Integer;
                               Shortness: Integer;
                               Compar_Form: Integer;
                               Result: PWideChar
                              ): integer; stdcall; external 'solarix_grammar_engine.dll' name 'sol_GetAdjectiveForm';

function sol_CorrNounNumber( Engine: PInteger; EntryIndex: integer;
                             Value: Integer;
                             ICase: Integer;
                             Anim: Integer;
                             Result: PWideChar
                            ): integer; stdcall; external 'solarix_grammar_engine.dll' name 'sol_CorrNounNumber';

function sol_CorrVerbNumber( Engine: PInteger; EntryIndex: integer;
                             Value: Integer;
                             Gender: Integer;
                             Tense: Integer;
                             Result: PWideChar
                            ): integer; stdcall; external 'solarix_grammar_engine.dll' name 'sol_CorrVerbNumber';

function sol_CorrAdjNumber( Engine: PInteger; EntryIndex: integer;
                            Value: Integer;
                            Iase: Integer;
                            Gender: Integer;
                            Anim: Integer;
                            Result: PWideChar
                           ): integer; stdcall; external 'solarix_grammar_engine.dll' name 'sol_CorrAdjNumber';

function sol_FindWord( Engine: PInteger;
                       Word: PWideChar;
                       EntryIndex: PInteger;
                       Form: PInteger;
                       ClassIndex: PInteger
                      ): integer; stdcall; external 'solarix_grammar_engine.dll' name 'sol_FindWord';

function sol_Value2Text(
                        Engine: PInteger;
                        Result: PWideChar;
                        Value: Integer;
                        Gender: Integer
                       ): integer; stdcall; external 'solarix_grammar_engine.dll' name 'sol_Value2Text';

function sol_SeekWord( Engine: PInteger; word: PWideChar; Allow_Dynforms: Integer ): integer; stdcall; external 'solarix_grammar_engine.dll' name 'sol_SeekWord';
function sol_TranslateToNoun( Engine: PInteger; EntryIndex: Integer ): integer; stdcall; external 'solarix_grammar_engine.dll' name 'sol_TranslateToNoun';
function sol_TranslateToInfinitive( Engine: PInteger; EntryIndex: Integer ): integer; stdcall; external 'solarix_grammar_engine.dll' name 'sol_TranslateToInfinitive';
function sol_TranslateToBase( Engine: PInteger; Word: PWideChar; AllowDynforms: Integer ): integer; stdcall; external 'solarix_grammar_engine.dll' name 'sol_TranslateToBase';
function sol_TranslateToBases( Engine: PInteger; Word: PWideChar; AllowDynforms: Integer ): integer; stdcall; external 'solarix_grammar_engine.dll' name 'sol_TranslateToBases';


function sol_ProjectWord( Engine: PInteger; Word: PWideChar; Allow_Dynforms: Integer ): PInteger; stdcall; external 'solarix_grammar_engine.dll' name 'sol_ProjectWord';
function sol_ProjectMisspelledWord( Engine: PInteger; Word: PWideChar; Allow_Dynforms: Integer; nmaxmiss: Integer ): PInteger; stdcall; external 'solarix_grammar_engine.dll' name 'sol_ProjectMisspelledWord';

function sol_CountProjections( hCoordList: PInteger ): integer; stdcall; external 'solarix_grammar_engine.dll' name 'sol_CountProjections';

procedure sol_DeleteProjections( hCoordList: PInteger ); stdcall; external 'solarix_grammar_engine.dll' name 'sol_DeleteProjections';

function sol_GetIEntry( hCoordList: PInteger; Index: Integer ): integer; stdcall; external 'solarix_grammar_engine.dll' name 'sol_GetIEntry';

function sol_GetProjCoordState(
                               Engine: PInteger;
                               hCoordList: PInteger;
                               Index: Integer;
                               Coord: Integer
                              ): integer; stdcall; external 'solarix_grammar_engine.dll' name 'sol_GetProjCoordState';



// http://www.solarix.ru/api/ru/sol_SyntaxAnalysis.shtml
function sol_SyntaxAnalysis( Engine: PInteger; Sentence: PWideChar; MorphologicalFlags: Integer; SyntacticFlags: Integer; MaxMillisecTimeout: Integer; LanguageID: Integer ): PInteger; stdcall; external 'solarix_grammar_engine.dll' name 'sol_SyntaxAnalysis';
function sol_SyntaxAnalysisA( Engine: PInteger; Sentence: PAnsiChar; MorphologicalFlags: Integer; SyntacticFlags: Integer; MaxMillisecTimeout: Integer; LanguageID: Integer ): PInteger; stdcall; external 'solarix_grammar_engine.dll' name 'sol_SyntaxAnalysisA';

// http://www.solarix.ru/api/ru/sol_MorphologyAnalysis.shtml
function sol_MorphologyAnalysis( Engine: PInteger; Sentence: PWideChar; Flags: Integer; UnusedFlags: Integer; MaxMillisecTimeout: Integer; LanguageID: Integer ): PInteger; stdcall; external 'solarix_grammar_engine.dll' name 'sol_MorphologyAnalysis';
function sol_MorphologyAnalysisA( Engine: PInteger; Sentence: PAnsiChar; Flags: Integer; UnusedFlags: Integer; MaxMillisecTimeout: Integer; LanguageID: Integer ): PInteger; stdcall; external 'solarix_grammar_engine.dll' name 'sol_MorphologyAnalysisA';

// http://www.solarix.ru/api/ru/sol_DeleteResPack.shtml
procedure sol_DeleteResPack( hPack: PInteger ); stdcall; external 'solarix_grammar_engine.dll' name 'sol_DeleteResPack';

// http://www.solarix.ru/api/ru/sol_CountGrafs.shtml
function sol_CountGrafs( hPack: PInteger ): integer; stdcall; external 'solarix_grammar_engine.dll' name 'sol_CountGrafs';
